# mirage

./: .gitignore  Cargo.toml  README.md  test_swagger.json
.github/workflows/: ci.yml  release.yml
docs/: INDEX.md
docs/dev/: architecture.md  contributing.md
docs/user/: commands.md  getting-started.md
src/: composer.rs  entity_graph.rs  learn.rs  main.rs  parser.rs  recipe.rs  rules.rs  schema.rs  seeder.rs  server.rs
tests/: integration.rs  qa-endpoint-layer.sh  qa-migrate-seed-counts.sh  qa-per-table-seed.sh  qa-tsrs-toggle-roundtrip.sh  qa-wizard.sh
tests/fixtures/: input_only.yaml  mega.yaml  pets.jsonl  petstore.yaml
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: EntityBox.tsx  ForceGraph.tsx  crossings-check.ts  dagLayout.test.ts  dagLayout.ts  dagreLayout.test.ts  dagreLayout.ts  index.css  index.tsx  panZoomInvariant.test.ts
