[package]
name = "mirage"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
rusqlite = { version = "0.39", features = ["bundled"] }
serde_yaml = "0.9"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
fake = { version = "5", features = ["derive"] }
rust-embed = "8"
tokio = { version = "1", features = ["full"] }
