[package]
name = "mirage"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Swagger 2.0 mock API server with SQLite-backed fake data"

[dependencies]
axum = "0.8"
rusqlite = { version = "0.39", features = ["bundled"] }
serde_yaml = "0.9"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
fake = { version = "5", features = ["derive"] }
rand = "0.10"
mime_guess = "2"
rust-embed = "8"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
